--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
