--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -21,7 +17,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Archive Explorer</title>
+    <title>Twitter Archive Explorer</title>
+
+    <meta name="description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
+
+    <meta name="og:title" content="Twitter Archive Explorer">
+    <meta name="og:image" content="https://archive-explorer.fr/favicon.ico">
+    <meta name="og:description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
+    <meta name="og:url" content="https://archive-explorer.fr">
+    <meta name="og:type" content="website">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
