SEO opti, fix for DM page

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,20 @@
     <meta name="og:url" content="https://archive-explorer.fr">
     <meta name="og:type" content="website">
 
+    <meta name="title" content="Twitter Archive Explorer">
+
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:site_name" content="Twitter Archive Explorer">
+    <meta property="og:image" content="https://archive-explorer.fr/assets/icon.png">
+
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:url" content="https://archive-explorer.fr/">
+    <meta property="twitter:title" content="Twitter Archive Explorer">
+    <meta property="twitter:description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
+    <meta property="twitter:image" content="https://archive-explorer.fr/assets/icon.png">
+
+    <meta name="theme-color" content="#5f92ff">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
