--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
-    <meta name="theme-color" content="#000000" />
     <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -17,7 +16,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
     <title>Twitter Archive Explorer</title>
+
+    <!-- % META_REPLACEMENT % -->
+    <meta name="replacement">
 
     <meta name="description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
 
@@ -38,6 +41,9 @@
     <meta property="twitter:title" content="Twitter Archive Explorer">
     <meta property="twitter:description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
     <meta property="twitter:image" content="https://archive-explorer.fr/assets/icon.png">
+
+    <meta name="end-replacement">
+    <!-- % END META_REPLACEMENT % -->
 
     <meta name="theme-color" content="#5f92ff">
 
