Typos, update Archive eader

--- a/public/index.html
+++ b/public/index.html
@@ -24,21 +24,21 @@
 
     <meta name="description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
 
-    <meta name="og:title" content="Twitter Archive Explorer">
+    <meta name="og:title" content="Twitter Archive Explorer - Tweet Eraser">
     <meta name="og:image" content="https://archive-explorer.com/favicon.ico">
     <meta name="og:description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
     <meta name="og:url" content="https://archive-explorer.com">
     <meta name="og:type" content="website">
 
-    <meta name="title" content="Twitter Archive Explorer">
+    <meta name="title" content="Twitter Archive Explorer - Tweet Eraser">
 
     <meta property="og:locale" content="en_US"/>
-    <meta property="og:site_name" content="Twitter Archive Explorer">
+    <meta property="og:site_name" content="Twitter Archive Explorer - Tweet Eraser">
     <meta property="og:image" content="https://archive-explorer.com/assets/icon.png">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:url" content="https://archive-explorer.com/">
-    <meta property="twitter:title" content="Twitter Archive Explorer">
+    <meta property="twitter:title" content="Twitter Archive Explorer - Tweet Eraser">
     <meta property="twitter:description" content="Browse your Twitter archive, delete tweets easily and dig into you old content.">
     <meta property="twitter:image" content="https://archive-explorer.com/assets/icon.png">
 
